js/src/tests/test262/built-ins/NativeErrors/SyntaxError/prototype/name.js
assert
.
sameValue
(
SyntaxError
.
prototype
.
name
"
SyntaxError
"
)
;
verifyNotEnumerable
(
SyntaxError
.
prototype
"
name
"
)
;
verifyWritable
(
SyntaxError
.
prototype
"
name
"
)
;
verifyConfigurable
(
SyntaxError
.
prototype
"
name
"
)
;
reportCompare
(
0
0
)
;
